// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog alert exist 1`] = `
<button
  className="roue-button"
/>
`;

exports[`Dialog confirm exist 1`] = `
<button
  className="roue-button"
/>
`;

exports[`Dialog modal exist 1`] = `
<button
  className="roue-button"
  onClick={[Function]}
/>
`;
